<resources>

    <!--ACTIVITIES-->
    <string name="activity_add_activi">Criar Atividade</string>
    <string name="activity_edit_activi">Editar Atividade</string>
    <string name="activity_times">Cronometragens</string>
    <string name="activity_edit_times">Editar Cronometragem</string>
    <string name="activity_add_todo">Criar Lembrete</string>
    <string name="activity_focus">Modo Produtividade</string>

    <!--WIDGETS-->
    <string name="widget_tittle_best_choice">Melhor Produtividade</string>

    <!--BTN-->
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Deletar</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_save">Salvar</string>

    <!--TABS-->
    <string name="app_name">OrganizeMe</string>
    <string name="tab_text_1">Atividades</string>
    <string name="tab_text_2">Estatísticas</string>
    <string name="tab_text_3">Tarefas</string>

    <!--MENU-->
    <string name="action_settings">Configurações</string>
    <string name="action_history_timing_tasks">Cronometragens</string>
    <string name="action_about">Sobre</string>

    <!--TASKS-->
    <string name="task_name">Nome da atividade</string>
    <string name="task_end">Finalizar Cronometragem</string>
    <string name="task_error_create">Preencha todos os campos para criar a atividade.</string>

    <!--TIMES-->
    <string name="txt_duration">Duração:</string>
    <string name="txt_productivity">Produtividade:</string>
    <string name="txt_humor">Estado Físico:</string>
    <string name="txt_more_information">Informações Adicionais:</string>
    <string name="txt_good">Bom</string>
    <string name="txt_medium">Médio</string>
    <string name="txt_bad">Ruim</string>
    <string name="txt_happy">Feliz</string>
    <string name="txt_neutral">Neutro</string>
    <string name="txt_sad">Cansado</string>
    <string name="txt_date">Data: </string>

    <!--END TIMING-->
    <string name="txt_info_productivity">Como você avalia seu rendimento?</string>
    <string name="txt_info_humor_before">Seu humor no início da atividade:</string>
    <string name="txt_info_humor">Como você se sente agora?</string>
    <string name="txt_info_duration">Duração em minutos</string>

    <!--Cards-->
    <string name="title_card_productivity">Estatística de Produtividade</string>
    <string name="info_card_productivity">Com os dados de início e término de suas atividades, conseguimos plotar um gráfico com intervalos do dia onde você é mais produtivo.</string>

    <string name="title_card_best_time">Duração Máxima por Humor</string>
    <string name="info_card_best_time">Com base em suas cronometragens, este Card gera um tempo médio para obter uma boa produtividade p/ os seus estados de espírito.</string>

    <!--TODO-->
    <string name="todo_name">Título do lembrete</string>
    <string name="todo_observation">Observações</string>
    <string name="todo_no_name">O título do lembrete não pode ficar vazio.</string>
    <string name="todo_description">Observações para este lembrete</string>
    <string name="todo_no_description">Esse lembrete não possuí nenhuma observação.</string>
    <string name="todo_edit">Editar Lembrete</string>
    <string name="todo_edit_success">Lembrete alterado com sucesso!</string>
    <string name="todo_edit_error">Não foi possível alterar oo lembrete!</string>

    <!--MESSAGES-->
    <string name="message_welcome">Bem-vindo(a) ao </string>
    <string name="message_no_tasks">Você não tem atividade cadastrada.</string>
    <string name="message_no_timing">Opss! Você ainda não cronometrou seu tempo.</string>
    <string name="message_no_todo">Você concluiu todas as tarefas. Descanse um pouco.</string>
    <string name="message_no_tasks_tab">Você não tem atividade cadastrada. Clique no botão abaixo para cadastar.</string>
    <string name="message_need_more_counts_chart">Precisamos de mais cronometragens para gerar um gráfico desta atividade. Tente selecionar outra atividade.</string>
    <string name="message_need_more_counts_bestchoice">Opss! É preciso mais cronometragens para gerar uma estatística de produtividade. Volte mais tarde.</string>
    <string name="message_need_more_for_interval">Necessitamos de mais cronometragens para encontrar o intervalo do seu dia em que você é mais produtivo.</string>

    <!--TABS FIRST USE-->
    <string name="tab_description">Software para gerenciamento e qualificação do tempo.</string>
    <string name="tab_one_title">Auxilio para organização</string>
    <string name="tab_one_description">Comece agora a organizar suas atividades e tenha uma rotina produtiva.</string>
    <string name="tab_two_title">Estatísticas úteis</string>
    <string name="tab_two_description">Você terá em mãos suas estatísticas que o ajudarão a obter uma melhor produtividade.</string>
    <string name="tab_three_title">Esqueceu de fazer algo?</string>
    <string name="tab_three__description">Você poderá utilizar a lista de tarefas que App dispõe para acrescentar algo que não queira esquecer.</string>

    <!--ABOUT PAGE-->
    <string name="about_page">Desenvolvi esse aplicativo para auxiliar os estudantes na organização do seu tempo de estudo. O presente trabalho foi realizado com o apoio da Universidade Tecnológica Federal do Paraná - UTFPR - Brasil.</string>

</resources>
