<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="350dp">

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:text="@string/todo_edit"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:textStyle="bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <TextView
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/todo_name"/>

            <EditText
                android:id="@+id/editTodoName"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:layout_height="wrap_content"
                android:hint="@string/todo_name" />

            <TextView
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/todo_observation"/>
            <EditText
                android:id="@+id/editTodoDescription"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:lines="4"
                android:scrollbars="vertical"
                android:maxLines="4"
                android:minLines="1"
                android:layout_height="wrap_content"
                android:hint="@string/todo_no_description" />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/deleteToDo"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:drawableStart="@android:drawable/ic_delete"
                android:layout_height="wrap_content"
                android:text="@string/btn_delete" />


            <Button
                android:id="@+id/editToDo"
                android:layout_width="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_save"
                android:layout_height="wrap_content"
                android:text="@string/btn_save" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>