<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/task_end"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_info_productivity"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionGood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/colorTerciary"
            android:text="@string/txt_good" />

        <RadioButton
            android:id="@+id/optionMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"

            android:text="@string/txt_medium"/>

        <RadioButton
            android:id="@+id/optionBad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"

            android:text="@string/txt_bad"/>

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_info_humor_before"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionHappyBefore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableEnd="@drawable/ic_happy"
            android:textColor="@color/colorTerciary"
            />

        <RadioButton
            android:id="@+id/optionNeutralBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"

            android:drawableEnd="@drawable/ic_neutral"/>

        <RadioButton
            android:id="@+id/optionSadBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"

            android:drawableEnd="@drawable/ic_sad" />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txt_info_humor"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/optionHappy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:drawableEnd="@drawable/ic_happy"
            android:textColor="@color/colorTerciary"/>

        <RadioButton
            android:id="@+id/optionNeutral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"
            android:drawableEnd="@drawable/ic_neutral"
            />

        <RadioButton
            android:id="@+id/optionSad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTerciary"


            android:drawableEnd="@drawable/ic_sad"
            />

    </RadioGroup>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="Deseja acrescentar mais informações?"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/moreInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/btn_save"
            android:textColor="#5DBCD2"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>
</android.support.design.widget.CoordinatorLayout>